# quiz

./: .gitignore  Celebrity.java  Despace.java  DoubleChecker.java  IsRotation.java  Leniya.java  ListPartition.java  Math2020MMO.java  MinInt.java  Multiply2020Savvateev.java  Puzzle.java  README.md
NplusOne2018/: Readme.md  alina.js  checker.js
cpp/: Lesson2.cpp  Source.cpp  Source1.cpp  permutation_savvateev.cpp  string_test.cpp
determinant/: CMakeLists.txt  Readme.md  main.cpp  solve_array.cpp  solve_c_array.cpp  solve_permutation.cpp  solve_vector.cpp  solver.h  Игра определитель.txt
determinant/asm/: c_arr.txt  std_arr.txt  vector.txt
determinant/measure/: CMakeLists.txt  measure.cpp  measure.h
determinant/solver/: CMakeLists.txt  common.cpp  solve_array.cpp  solve_c_array.cpp  solve_c_array_old.cpp  solve_c_flat.cpp  solve_vector.cpp  solve_vector_simple.cpp  solver.h
determinant/solver/web/: .gitattributes  WasmExplorer1z.txt  WasmExplorerC.txt  WasmExplorerC2.txt  WasmExplorerC2.wasm  a.out.js  a.out.wasm  emccC2.wasm  emccC2.wat.wast.txt  emccC3.wasm  emccC3.wat.wast.txt  fib.js  fib.wasm  hello_world.c  hello_world.html  hello_world.wasm  hello_world2.wasm  instantiate-streaming.html  main.c  main.cpp  output.wasm  prime.wasm  run.txt  s2.wasm  s3.wasm  s5.wasm  s8.wasm  s9.wasm  s9.wat.txt  solve_web.c  solve_web.cpp  solve_web1.wasm  solve_web3.wasm  solve_web4.wasm  solve_web5.wasm  solve_web6.wasm  solve_web7.wasm  sss.html  sss.js  sss.wasm  (+1 more)
determinant/tests/: CMakeLists.txt  tests.cpp  time_measure.cpp
determinant_java/: Determinant.java
euler/: 54.test.js  EulerRegister.java  euler_poker_54.test.js  euler_register.js
js/: ImpossibleTrivia.js  cycle.js  timeout.js
luxoft/: T1_UnsolvableCase.java  T2_Distinct.java  T3_WaitForIt.java  T4_Pair.java
mexmat/: README.md  data.res  data2.txt  february.cpp
microsoft/: KClosestPoints.java
reflection/: MyClass.java
(+213 files in other folders)
